Various style fixes, Some js fixes and commenting
- Scrollbars are now styled
- Fixed styling issues with uploading music progress bar
- Fixed 'Recent Activity' sidebar item

--- a/scss/_playmidnight.scss
+++ b/scss/_playmidnight.scss
@@ -83,51 +83,30 @@ body {
 ::-webkit-scrollbar {
 	width: 8px;
 	background: rgba(0, 0, 0, 0);
-	-webkit-border-radius: 100px;
-}
-
-::-webkit-scrollbar:hover {
-	background-color: rgba(0, 0, 0, 0.09);
 }
 
 ::-webkit-scrollbar-track {
-	background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(255,255,255,0.05);
 
 	&:hover {
-		background-color: rgba(0, 0, 0, .0);
-		box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1);
-	}
-
-	&:horizontal:hover {
-		box-shadow: inset 0 1px 0 rgba(0, 0, 0, .1);
+		background-color: rgba(255,255,255,0.1);
 	}
 
 	&:active {
-		background-color: rgba(0, 0, 0, .05);
-		box-shadow: inset 1px 0 0 rgba(0, 0, 0, .14), inset -1px 0 0 rgba(0, 0, 0, .07);
-	}
-
-	&:horizontal:active {
-		box-shadow: inset 0 1px 0 rgba(0, 0, 0, .14), inset 0 -1px 0 rgba(0, 0, 0, .07);
+		background-color: rgba(255,255,255,0.07);
 	}
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: rgba( 255, 255, 255, 0.1 );
-	box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset 0 -1px 0 rgba(0, 0, 0, .07);
-
-	&:horizontal {
-		box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset -1px 0 0 rgba(0, 0, 0, .07);
-	}
+	background-color: rgba(255,255,255,0.15);
+	border-radius: 5px;
 
 	&:hover {
-		background-color: rgba( 255, 255, 255, 0.25 );
-		box-shadow: inset 1px 1px 1px rgba(0, 0, 0, .25);
+		background-color: rgba(255,255,255,0.2);
 	}
 
 	&:active {
-		background-color: rgba( 255, 255, 255, 0.3 );
-		box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.35);
+		background-color: rgba(255,255,255,0.18);
 	}
 }
 
@@ -206,6 +185,9 @@ body {
 	background-color: $primary;
 }
 
+#music-content {
+	overflow-y: auto;
+}
 
 
 // Cards
@@ -432,6 +414,26 @@ body {
 }
 .song-row.selected-song-row .fade-out:after, .song-row.hover .fade-out:after {
 	background-image: linear-gradient(to right, rgba(lighten($primary, 4%), 0) 0%, lighten($primary, 4%) 100% );
+}
+
+.upload-progress-row {
+	td {
+		border-top: 1px solid lighten($primary, 5%);
+		border-bottom: 1px solid lighten($primary, 5%);
+		background-color: lighten($primary, 2%);
+	}
+}
+.upload-progress-bar-thumb {
+	background-color: lighten($primary, 6%);
+}
+.upload-progress-upload-label, .upload-progress-finished-label {
+	color: $font_primary;
+}
+.upload-progress-enjoy-android, .upload-progress-enjoy-ios {
+	color: $accent;
+}
+.upload-progress-finished-icon, .transfer-status-indicator-complete-icon, .upload-progress-upload-icon-arrow, .upload-progress-upload-icon-bar {
+	filter: grayscale(100%);
 }
 
 
